----------------------
* Add DeleteArtifacts manipulator to delete old artifacts directories (CC-446).
 
Origo Publisher
----------------------
* Add Publisher for the Origo collaboration platform (CC-775). Patch by Patrick Ruckstuhl.

ProjectConfig
----------------------
* ProjectConfig.toString() should return Project.toString() to avoid breaking external jmx scripts. Reported by Mark Hatton.

SSCM/SSCMBootstrapper
----------------------
* Change Surround sourcecontrol and bootstrapper to use CommandLine() classes (CC-786). Patch by Alex Hooper.

StreamPumper
----------------------
* Remove VT100 terminal escape sequences and other control characters apart from tab, newline and carriage return when reading character streams (CC-824). Patch by Martin Kleppmann.

SVN
----------------------
* Relax SVN externals parsing (CC-736). Reported by Patrick Muller.
* Will not cache authentication if username/password is specified (CC-723). Patch by Gunnar Wagenknecht.
* Added configDir attribute to allow use of separate Subversion configuration directory (CC-723). Patch by Gunnar Wagenknecht.

SVNBootstrapper
----------------------
* Will not cache authentication if username/password is specified (CC-722). Patch by Gunnar Wagenknecht.
* Added configDir attribute to allow use of separate Subversion configuration directory (CC-722). Patch by Gunnar Wagenknecht.

SVNLabelIncrementer
----------------------
* Default Label should contain LabelPrefix (CC-793). Reported by Henk de Vries, Patch by Rich.

VSS
----------------------
* VSS modificationset fails for root project (CC-783). Reported by Gert Driesen.

Documentation
======================
* Fix typo in NantScript docs - NAnt.Core.XMLLogger to NAnt.Core.XmlLogger (CC-784). Reported by Gert Driesen.
* Attribute contributors in UCM defaults to true in stead of false (CC-816). Reported by Patrick Jenner.
* Document rebases and pvob attribs in UCM (CC-817). Reported by Patrick Jenner.

reporting jsp app
======================
